--- a/index.html
+++ b/index.html
@@ -1,4 +1,22 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>project</title>
+ </head>
+ <body>
+    <h1>Angela Yu's Portfolio</h1>
+    <h2>I am a Web Developer</h2>
+    <hr>
+    <h3><a href="public/movie-ranking.html">Movie Ranking project</h3></a>
+    <img src ="assets/images/movie-ranking.png" alt="" width="400" height="200" >
+    <h3><a href="public/birthday-invite.html">birthday Invite project</h3></a>
+    <img src="assets/images/birthday-invite.png" alt="" width="400" height="200">
+    <h3><a href="public/contact.html">About me contact me</h3></a>
+ </body>
+ </html>
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
